final auctions and wiki

--- a/auctions/templates/auctions/create.html
+++ b/auctions/templates/auctions/create.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-    <h5 class="display-4">Create your item.</h5>
-
+    <h4 class="diplay-4" >Create New.</h4>
+    <hr />
     {% if message %}
         <div>{{ message }}</div>
     {% endif %}
