--- a/wiki/templates/wiki/error.html
+++ b/wiki/templates/wiki/error.html
@@ -4,7 +4,7 @@
 Error
 {% endblock %}
 
-{% block body %}
+{% block content %}
 <h1 class="error">{{message}}</h1>
 <a class="btn btn-danger" href={% url 'wiki:index' %}> Go back home </a>
 {% endblock %}
