--- a/wiki/templates/wiki/random.html
+++ b/wiki/templates/wiki/random.html
@@ -1,10 +1,6 @@
 {% extends "wiki/layout.html" %}
 
-{% block title %}
-{{ title }}
-{% endblock %}
-
-{% block body %}
+{% block content %}
 <h3>Page name: <span style="color:red">{{title}}</span> </h3>
 <hr />
 <div class="m-5">
