--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -18,8 +18,8 @@
    {% else %}
     <div class="container">
     <div>
-        <h1 class="display-3">Social Network example.</h1>
-        <p class="lead">Where you can post, comment, like and follow.</p>
+        <h1 class="display-4">Social Network example.</h1>
+        <p class="lead">In this app you can post, edit post, comment on post and Like the post. Also you can follow the others, see your followers posts and edit your profile.</p>
         <hr class="my-2">
         <p><a href="{% url 'login' %}?next={% url 'network:index' %}">Login</a> to continue...</p>
     </div>
