--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -2,13 +2,14 @@
 {% load static %}
 {% block title %}Auction{% endblock  %}
 {% block navbar %}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-2">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand" href="{% url 'auctions:index' %}">Auction &amp; Bid</a>
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-2" >
+        <a class="navbar-brand" href="{% url 'auctions:index' %}">Auction &amp; Bid</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+        <ul class="navbar-nav mr-auto">
             {% if user.is_authenticated %}
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'auctions:index' %}">All items</a>
@@ -39,3 +40,4 @@
         {% endif %}
     </nav>
     {% endblock %}
+
