--- a/home/templates/home/main.html
+++ b/home/templates/home/main.html
@@ -1,18 +1,10 @@
 {% load static %}
-<html>
-<head>
-    <title>{{ settings.APP_NAME }}</title>
-    <!-- edit samples/settings.py and add APP_NAME='DJ4E Samples' or similar
-        Also make sure that home/context_processors.py exists and is included
-        settings.py context processors as 'home.context_processors.settings' -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+{% extends 'base_template.html' %}
+{% block title %}
+Umair Django Projects
+{% endblock  %}
 
-    <link href="{% static 'home/styles.css' %}" rel="stylesheet">
-
-</head>
-<body class="bg-light">
+{% block content %}
     <div class="container">
             <h1 class="display-4">My Django Projects</h1>
             <p class="lead">Here are some samples (Each will open in a new tab):</p>
@@ -32,5 +24,4 @@
             
             </ul>
     </div>
-</body>
-</html>
+{% endblock  %}
