--- a/mail/templates/mail/index.html
+++ b/mail/templates/mail/index.html
@@ -10,7 +10,12 @@
 {% block navbar %}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">E-mail App</a>
+    {% if user.is_authenticated %}
+      <a class="navbar-brand" href="#">Hi, {{request.user.username}}</a>
+      <a class="navbar-brand" href="#"><small>email: {{request.user.email}}</small></a>
+    {% else %}
+      <a class="navbar-brand" href="#">E-mail App</a>
+    {% endif %}
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -30,10 +35,6 @@
         </li>
       {% endif %}
     </ul>
-    {% if user.is_authenticated %}
-      <a class="navbar-brand" href="#">Hi, {{request.user.username}}</a>
-      <a class="navbar-brand" href="#"><small>email: {{request.user.email}}</small></a>
-    {% endif %}
   </div>
 </nav>
 {% endblock  %}
