--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -3,7 +3,11 @@
 {% block title %}Social Network{% endblock  %}
     {% block navbar %} 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
-        <a class="navbar-brand" href="{% url 'network:index' %}">My Social Network</a>
+        {% if user.is_authenticated %}
+            <a class="navbar-brand" href="{% url 'network:profile' user.id %}">Hi, <strong>{{ user.username }} </strong><small>Go to profile</small></a>
+        {% else %}
+            <a class="navbar-brand" href="{% url 'network:index' %}">My Social Network</a>
+        {% endif %}
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -25,9 +29,6 @@
                     </li>
                 {% endif %}
             </ul>
-            {% if user.is_authenticated %}
-                <a class="navbar-brand" href="{% url 'network:profile' user.id %}">Hi, <strong>{{ user.username }} </strong><small>Go to profile</small></a>
-            {% endif %}
         </div>
     </nav>
 
