--- a/home/templates/home/main.html
+++ b/home/templates/home/main.html
@@ -10,8 +10,11 @@ Umair Django Projects
             <p class="lead">Here are some samples (Each will open in a new tab):</p>
             <hr class="my-4">
             <ul class="list-group">
+                <li class="list-group-item"><a href="https://umairny.pythonanywhere.com/ads" target="_blank">Ads Site</a> - In this app you can post ads, edit, like, and comment if you are authenticat. <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                <p style="color:gray;">In this app you can create an item, edit, add/remove if you created the ad. You can comment and favorite the and if you are loggedin it deploys on pythonanywhere website.</p></li>
+
                 <li class="list-group-item"><a href="auctions" target="_blank">Auctions</a> - An app that show little eBay. <i class="fa fa-shopping-basket" aria-hidden="true"></i>
-                <p style="color:gray;">In this app you can create an item, edit, comment,add/remove to wishlist, bid on items and select by category. Winner of bid shows if you are the winner.</p></li>
+                <p style="color:gray;">In this app you can create an item, comment,add/remove to wishlist, bid on items and select by category. Winner of bid shows if you are the winner.</p></li>
 
                 <li class="list-group-item"><a href="mail" target="_blank">E-mail</a> - A single page app. An app that shows Email example. <i class="fa fa-envelope" aria-hidden="true"></i>
                 <p style="color:gray;">In this app you can send, receive and achieve emails. Also you can reply the emails.</p></li>
