--- a/home/templates/home/main.html
+++ b/home/templates/home/main.html
@@ -10,20 +10,20 @@ Umair Django Projects
             <p class="lead">Here are some samples (Each will open in a new tab):</p>
             <hr class="my-4">
             <ul class="list-group">
-                <li class="list-group-item"><a href="https://umairny.pythonanywhere.com/ads" target="_blank">Ads Site</a> - In this app you can post ads, edit, like, and comment if you are authenticat. <i class="fa fa-shopping-basket" aria-hidden="true"></i>
-                <p style="color:gray;">In this app you can create an item, edit, add/remove if you created the ad. You can comment and favorite the and if you are loggedin it deploys on pythonanywhere website.</p></li>
+                <li class="list-group-item"><a href="https://umairny.pythonanywhere.com/ads" target="_blank">Ads Site</a> - In this app you can create Ads, edit, fav, and comment if you are authenticated. <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                <p style="color:gray;">In this app you can create an Ad, edit it, add/remove if you created this Ad. You can comment and favorite any Ad if you are logged in. This app is deployed on pythonanywhere website.</p></li>
 
-                <li class="list-group-item"><a href="auctions" target="_blank">Auctions</a> - An app that show little eBay. <i class="fa fa-shopping-basket" aria-hidden="true"></i>
-                <p style="color:gray;">In this app you can create an item, comment,add/remove to wishlist, bid on items and select by category. Winner of bid shows if you are the winner.</p></li>
+                <li class="list-group-item"><a href="auctions" target="_blank">Auctions</a> - An app that shows little eBay. <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                <p style="color:gray;">In this app you can create an item, comment, add/remove to watchlist, bid on items, and select by category. The winner of the item shows if you are the winner.</p></li>
 
-                <li class="list-group-item"><a href="mail" target="_blank">E-mail</a> - A single page app. An app that shows Email example. <i class="fa fa-envelope" aria-hidden="true"></i>
-                <p style="color:gray;">In this app you can send, receive and achieve emails. Also you can reply the emails.</p></li>
+                <li class="list-group-item"><a href="mail" target="_blank">E-mail</a> - A single page app. This shows some examples of how email apps work. <i class="fa fa-envelope" aria-hidden="true"></i>
+                <p style="color:gray;">In this app you can compose, send, receive, and archive emails. Also, you can reply to emails, see the sent, archived emails.</p></li>
 
-                <li class="list-group-item"><a href="network" target="_blank">Social Network</a> - An app that show simple social network. <i class="fa fa-twitter" aria-hidden="true"></i>
-                <p style="color:gray;">In this app you can post, edit post, comment on post and Like the post. Also you can follow the others, see your followers posts and edit your profile.</p></li>
+                <li class="list-group-item"><a href="network" target="_blank">Social Network</a> - An app that shows simple social networks. <i class="fa fa-twitter" aria-hidden="true"></i>
+                <p style="color:gray;">In this app you can post, edit post, comment on post and Like the post. Also, you can follow others, see your followers posts and edit your profile.</p></li>
 
-                <li class="list-group-item"><a href="wiki" target="_blank">wiki</a> - An app that use Markdwon <i class="fa fa-language" aria-hidden="true"> language</i> to <strong> CUR </strong> opration.
-                <p style="color:gray;">In this app you can create, update and retrieve the pages. Also you can search the pages and randomly select the pages.</p></li>
+                <li class="list-group-item"><a href="wiki" target="_blank">wiki</a> - An app that use Markdown <i class="fa fa-language" aria-hidden="true"> language</i> to <strong> CUR </strong> operation.
+                <p style="color:gray;">In this app you can create, update, and retrieve pages. Also, you can search the pages and randomly select the pages.</p></li>
             
             </ul>
     </div>
